# codec-hennou

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  bench.py  bench.sh  codec  codec.sh  codech.csproj  codech.php  codech.py  codech.rb  codech.sln  codech.ts  composer.json  functions.c  functions.h  go.mod  header.h  main.c  main.go  package-lock.json  package.json  switches.c  switches.h  tsconfig.json
.github/workflows/: rust.yml
codech/: main.c
docs/: README.md  profile
lib/: Args.c  Args.h  File.c  File.h  Parallel.c  Parallel.h  Struct.c  Struct.h  library.c  library.h  minunit.h
lib/network/: Download.c  Download.h
lib/struct/: Array.c  Array.h  HashMap.c  HashMap.h  List.c  List.h  TypeLessHashMap.c  TypeLessHashMap.h  TypeLessList.c  TypeLessList.h
src/: Codec.cs  Matrix.cs  Options.cs  Program.cs  args.rs  build.rs  codec.c  codec.h  codec.rs  codech.go  functions.c  functions.h  header.h  lib.rs  main.c  main.rs  matrix.c  matrix.go  matrix.h  matrix.rs  scheduler.c  scheduler.h  structs.h  switches.c  switches.h  workers.c  workers.h
src/Extensions/: EnumerableExtensions.cs
src/codec/: mod.rs  parallel.rs
src/io/jrimbault/codech/: Codec.java  Main.java  Matrix.java
src/matrix/: error.rs  mod.rs
tests/: main.c  test_array.c  test_file.c  test_hashmap.c  test_list.c  test_network.c  test_parallel.c  test_typelesshashmap.c
