[package]
name = "codech"
version = "0.1.0"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
exitcode = "1.1.2"
rayon = "1.2.1"
num_cpus = "*"

[dev-dependencies]
rstest = "0.4"
rand = "0.7.2"

[build-dependencies]
built = "0.3"

[profile.release]
codegen-units = 1
