[package]
name = "codech"
version = "0.1.0"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1"
rayon = "1.3"
num_cpus = "1.13"
structopt = "0.3"

[dev-dependencies]
rstest = "0.4"
rand = "0.7.2"

[profile.release]
codegen-units = 1
